--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,20 +4,27 @@
     box-sizing: border-box;
 }
 
-.app {
-    margin: 0 auto;
-}
-
 .slider {
+    margin-top: 100px;
     position: relative;
     display: flex;
     justify-content: center;
     align-content: center;
 }
 
-.slider .images {
-    /* max-width: 300px; */
+.slider .images{
+    width: 1000px;
+    height: 500px;
 }
+
+.slider .images img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+}
+
+
 
 .prev, 
 .next {
@@ -42,11 +49,11 @@
 }
 
 .prev {
-    left: 50px;
+    left: 20%;
 }
 
 .next {
-    right: 50px;
+    right: 20%;
 }
 
 .dot-nav {
@@ -60,7 +67,7 @@
     width: 200px;
     height: 50px;
     background: rgba(0,0,0, .7);
-    border-radius: 20px;
+    border-radius: 30px;
     color:#888;
 }
 
